<resources>
    <string name="app_name">Koller</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Jelszó</string>
    <string name="invalid_username">Helytelen felhasználónév</string>
    <string name="invalid_password">Helytelen jelszó</string>
    <string name="login_failed">Sikertelen bejelentkezés</string>
    <string name="login">Bejelentkezés</string>
    <string name="username">Felhasználónév</string>
    <string name="made_by">Készítette, Norbert</string>
    <string name="or">Vagy</string>
    <string name="touch_nfc">Közelítsd az NFC bilétád</string>
    <string name="please_login">Kérlek jelentkezz be a folytatáshoz</string>
    <string name="action_sign_in_short">Temp</string>
    <string name="action_sign_in">Temp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello üres fragment</string>

    <string-array name="languages">
        <item>Magyar</item>
        <item>Angol</item>
        <item>Német</item>
        <item>Ukrán</item>
    </string-array>

    <string-array name="mode">
        <item>Rendszer</item>
        <item>Világos</item>
        <item>Sötét</item>
    </string-array>
    <string name="language">Nyelv</string>
    <string name="logout">Kijelentkezés</string>
    <string name="general">Általános</string>
    <string name="notifications">Értesítések</string>
    <string name="all">Összes</string>
    <string name="arrival_reminder">Beérkezés emlékeztető</string>
    <string name="arrival_reminder_description">Értesítést az utolsó 1, és fél órádban</string>
    <string name="occupation_reminder">Foglalkozás emlékeztető</string>
    <string name="occupation_reminder_description">Értesítés negyed órával a foglalkozás előtt</string>
    <string name="room_order">Szobarend</string>
    <string name="commendation_warning">Dícséret/Figyelmeztetés</string>
    <string name="news">Hírek</string>
    <string name="appearance">Megjelenítés</string>
    <string name="mode">Mód</string>
    <string name="colors">Színek</string>
    <string name="student_hostel">Kollégium</string>
    <string name="website">Weboldal</string>
    <string name="facebook">Facebook</string>
    <string name="development_team">Fejlesztő csapat</string>
    <string name="team_name">Norbert</string>
    <string name="email">Email</string>
    <string name="version">v0.0.1</string>
    <string name="sleeping">Alvás</string>
    <string name="out_in">Kint/Bent</string>
    <string name="in">Bent</string>
    <string name="doing_things">Szabad elfoglaltság</string>
    <string name="open_ediary">E-Napló megnyitása</string>
    <string name="monday">Hétfő</string>
    <string name="tuesday">Kedd</string>
    <string name="wednesday">Szerda</string>
    <string name="thursday">Csütörtök</string>
    <string name="friday">Péntek</string>
    <string name="saturday">Szombat</string>
    <string name="january">Január</string>
    <string name="february">Február</string>
    <string name="march">Március</string>
    <string name="april">Április</string>
    <string name="may">Május</string>
    <string name="june">Június</string>
    <string name="july">Július</string>
    <string name="august">Augusztus</string>
    <string name="september">Szeptember</string>
    <string name="october">Október</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="now">Most</string>
    <string name="silence_warning">Szilencium van, maradj csöndben!</string>
    <string name="title">Cím</string>
    <string name="description">Leírás</string>
    <string name="icon">Ikon</string>
    <string name="today">Ma</string>
    <string name="go_out_text">-ig még kimehetsz</string>
    <string name="stay_out_text">-ig még kint maradhatsz</string>
    <string name="will_remain">Lesz még  visszaérni</string>
    <string name="now_remain">Van még  visszaérni</string>
    <string name="praises">Dicséretek</string>
    <string name="warnings">Figyelmeztetők</string>
    <string name="students">Diákok</string>
    <string name="teachers">Tanárok</string>
    <string name="rooms">Szobák</string>
    <string name="classrooms">Termek</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae dolor nec metus tempus maximus. Vestibulum egestas dictum hendrerit. Pellentesque tellus enim, tempor id quam nec, fringilla gravida velit. Aenean luctus eros eu mi posuere rhoncus. Quisque quis quam augue. Morbi venenatis, libero quis gravida ornare, felis nunc efficitur felis, eu egestas eros sem ac purus. Phasellus ullamcorper ante dolor, sed pretium purus ultrices non. Quisque gravida laoreet finibus. Aenean convallis orci eu nibh faucibus dictum volutpat at felis. Donec vestibulum pulvinar justo, at vehicula enim egestas vel. Sed lectus nulla, ultrices sed sodales rhoncus, suscipit scelerisque ante.  Nulla bibendum dictum massa vel accumsan. Mauris tempor iaculis neque, vel vehicula sem ullamcorper sit amet. Ut luctus mi nunc, ac blandit justo dignissim eu. Etiam a purus a tortor luctus congue. In nec fringilla enim. Vestibulum facilisis nisl in mi venenatis varius quis ut tortor. Nullam pretium laoreet neque at condimentum.  Aliquam viverra massa sed sapien accumsan, id iaculis dolor eleifend. Etiam ex tellus, lobortis ac eros quis, dignissim auctor risus. Cras ligula ligula, bibendum vel lectus quis, posuere ultrices metus. Vivamus lobortis tempus metus, et sagittis justo convallis vel. Aenean id arcu in metus rhoncus molestie. Vestibulum cursus quis diam ac dictum. Nam ut nulla quam. Praesent molestie magna massa, at pharetra purus hendrerit at. Maecenas lobortis volutpat magna nec blandit. Donec elit urna, faucibus laoreet cursus vel, feugiat quis elit.</string>
    <string name="windows">Ablakok</string>
    <string name="beds">Ágyak</string>
    <string name="power_cut">Áramtalanítás</string>
    <string name="table">Asztal</string>
    <string name="fridge">Hűtő</string>
    <string name="bin">Kuka</string>
    <string name="air">Levegő</string>
    <string name="unwashed">Mosatlan</string>
    <string name="floor">Padló</string>
    <string name="shelves">Polcok</string>
    <string name="order">Rend</string>
    <string name="home">Kezdőképernyő</string>
    <string name="calendar">Naptár</string>
    <string name="absence">Késések</string>
    <string name="everyone">Mindenki</string>
    <string name="appdu_description">appdu_description</string>
    <string name="service_description">service_description</string>
    <string name="ok">Okés</string>
    <string name="nfc_success">Sikeres belépés!</string>
</resources>