<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/CardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                    android:id="@+id/drag_handle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/text_container_margin"
                        android:layout_marginTop="@dimen/text_container_margin"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="@dimen/text_container_margin"
                        android:layout_weight="1"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/notification_title"
                            style="@style/Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Szobarend" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/notification_icon"
                        style="@style/Title"
                        android:layout_width="45sp"
                        android:layout_height="45sp"
                        android:layout_gravity="center"
                        android:backgroundTint="?android:attr/colorForeground"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="4"
                        android:textAlignment="center"
                        android:textColor="#00BF9F"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/panel_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2.5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/windows" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="18dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:src="@drawable/done_thick"
                        android:tint="?attr/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/beds" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/power_cut" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="18dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:src="@drawable/done_thick"
                        android:tint="?attr/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/table" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fridge" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bin" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="18dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:alpha="0.3"
                        android:src="@drawable/close_thick"
                        android:tint="?attr/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/air" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/floor" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shelves" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2.5dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:numStars="5"
                        android:rating="5" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/separator_margin_space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notification_description"
                    style="@style/Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Kis Gazsi"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Október 11."
                    android:textAlignment="textEnd" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>